# openenv-proj

./: .dockerignore  .example.env  .gitattributes  .gitignore  Dockerfile  README.md  READTHIS.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: Dockerfile  __init__.py  app.py  invoice_environment.py
tests/: test_environment.py  test_inference.py
